--- a/templates/contenidos/multimedia.html
+++ b/templates/contenidos/multimedia.html
@@ -1,5 +1,5 @@
 {% extends 'plantilla2.html' %}
-{% block title %} Modulo 1 {% endblock %}
+{% block title %} Multimedia {% endblock %}
 
 {%  block content %}
     
@@ -97,3 +97,8 @@
 
 {% endblock %}
 
+{% block javascript %}
+
+    <script type="text/javascript" src="../static/javascript/script.js"></script>
+
+{% endblock %}
