--- a/templates/contenidos/unidad1/modulo1-unidad1 -tm1.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1 -tm1.html
@@ -1,12 +1,12 @@
 {% extends 'plantilla2.html' %}
-{% block title %} Tema 2 {% endblock %}
+{% block title %} Unity 1 - Lesson 1 {% endblock %}
 
 {%  block content %}
 
     <div class="container initial">
     <ol class="breadcrumb">
-  <li>Modulo 1</li>
-        <li><a href="modulo1-unidad1.html">Unidad 1</a></li>
+  <li>Module 1</li>
+        <li><a href="modulo1-unidad1.html">Unity 1</a></li>
         <li class="active">Lesson 1</li>        
         
 </ol>
