--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson1-tm3.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson1-tm3.html
@@ -1,12 +1,12 @@
 {% extends 'plantilla2.html' %}
-{% block title %} Tema 3 {% endblock %}
+{% block title %} Unity 1 - Lesson 1 {% endblock %}
 
 {%  block content %}
 
     <div class="container initial">
     <ol class="breadcrumb">
-  <li>Modulo 1</li>
-        <li><a href="{% url 'modulo1-unidad1' %}">Unidad 1</a></li>
+  <li>Module 1</li>
+        <li><a href="{% url 'modulo1-unidad1' %}">Unity 1</a></li>
         <li class="active">Lesson 1</li>
             
         
