--- a/templates/footermod.html
+++ b/templates/footermod.html
@@ -1,16 +1,17 @@
 <!-- FOOTER -->
 	<div id="f">
 		<div class="container">
-			<div class="col-md-6 text-left copy">
-						<p>Copyright &copy; All Rights Reserved.</p>
+			<div class="col-md-4 text-left copy">
+						<p style="color: #f2dede;">Copyright &copy; All Rights Reserved.</p>
 					</div>
-					<div class="col-md-6 text-right dm">
+					<div class="col-md-8 text-right dm">
 						<ul id="downMenu">
-							<li class="active"><a href="{% url 'inicio-estudiante' %}">Inicio</a></li>
-							<li><a href="{% url 'modulo1' %}">Modulo</a></li>
-							<li><a href="#">Recursos</a></li>
-							<li><a href="#">Lorem</a></li>
-                            <li class="last"><a href="#">Configuración</a></li>
+							<li class="active"><a href="{% url 'inicio-estudiante' %}">Home</a></li>
+							<li><a href="{% url 'modulo1' %}">Module 1</a></li>
+							<li><a href="#">Module 2</a></li>
+							<li><a href="#">Module 3</a></li>
+							<li><a href="#">Module 4</a></li>
+							<li><a class="last" href="#">Recursos</a></li>
 		</div><!-- container -->
 	</div><!-- Footer -->
 
