--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson2-tm1.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson2-tm1.html
@@ -1,12 +1,12 @@
 {% extends 'plantilla2.html' %}
-{% block title %} Lesson 2 - Listen {% endblock %}
+{% block title %} Unity 1 - Lesson 2 {% endblock %}
 
 {%  block content %}
 
     <div class="container initial">
     <ol class="breadcrumb">
-  <li>Modulo 1</li>
-        <li><a href="{% url 'modulo1-unidad1' %}">Unidad 1</a></li>
+  <li>Module 1</li>
+        <li><a href="{% url 'modulo1-unidad1' %}">Unity 1</a></li>
         <li class="active">Lesson 2</li>
          
 </ol>
