--- a/templates/plantilla-prof.html
+++ b/templates/plantilla-prof.html
@@ -86,7 +86,7 @@
                         </ul>
                     </li> -->
                     <li>
-                        <a href="#"><i class="fa fa-fw fa-users"></i> Grupos</a>
+                        <a href="{% url 'lista-grupos' %}"><i class="fa fa-fw fa-users"></i> Grupos</a>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-fw fa-file-text-o"></i> Notas</a>
