--- a/templates/plantilla2.html
+++ b/templates/plantilla2.html
@@ -7,6 +7,11 @@
 
     <title>{% block title %} {% endblock %}</title>
 
+<!-- Favicon -->
+    <link rel="icon" type="image/png" href="../static/img//favicon/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="../static/img//favicon/favicon-16x16.png" sizes="16x16" />
+<!-- end favicon  -->
+
     <link href="../static/css/style-modulo.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../static/css/style-ahorcado.css">
     <link href="../static/vendors/bootstrap-3.3.6/dist/css/bootstrap-mod.css" rel="stylesheet">
@@ -28,43 +33,59 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Easy English</a>
+          <a class="navbar-brand" href="{% url 'inicio-estudiante' %}"> <img src="../static/img/logo/logo-e-font.png" class="img-responsive" alt="" width="120px" /> </a>
         </div>
         <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'inicio-estudiante' %}">INICIO</a></li>
+            <li class="active"><a href="{% url 'inicio-estudiante' %}">HOME</a></li>
 
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">CONTENIDOS <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">CONTENTS <span class="caret"></span></a>
               <ul class="dropdown-menu multi-level" role="menu">
                 <li class="dropdown-submenu">
-                  <a tabindex="-1" href="{% url 'modulo1' %}">Modulo 1 <span class="caret"></span></a>
+                  <a tabindex="-1" href="{% url 'modulo1' %}">Module 1 <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                      <li><a tabindex="-1" href="{% url 'modulo1-unidad1' %}">Unidad 1 - This is me!</a></li>
-                      <li><a href="{% url 'modulo1-unidad2' %}">Unidad 2 -  My family</a></li>
-                      <li><a href="{% url 'modulo1-unidad3' %}">Unidad 3 - School life and people</a></li>
+                      <li><a tabindex="-1" href="{% url 'modulo1-unidad1' %}">Unity 1 - This is me!</a></li>
+                      <li><a href="{% url 'modulo1-unidad2' %}">Unity 2 -  My family</a></li>
+                      <li><a href="{% url 'modulo1-unidad3' %}">Unity 3 - School life and people</a></li>
                   </ul>
                 </li>
                 <li class="dropdown-submenu">
-                  <a tabindex="-1" href="{% url 'modulo1' %}">Modulo 2 <span class="caret"></span></a>
+                  <a tabindex="-1" href="{% url 'modulo1' %}">Module 2 <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                      <li><a tabindex="-1" href="#">Unidad 1 - This is me!</a></li>
-                      <li><a href="#">Unidad 2 -  My family</a></li>
-                      <li><a href="#">Unidad 3 - School life and people</a></li>
+                      <li><a tabindex="-1" href="#">Unity 1 - This is me!</a></li>
+                      <li><a href="#">Unity 2 -  My family</a></li>
+                      <li><a href="#">Unity 3 - School life and people</a></li>
+                  </ul>
+                </li>
+                <li class="dropdown-submenu">
+                  <a tabindex="-1" href="{% url 'modulo1' %}">Module 3 <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                      <li><a tabindex="-1" href="#">Unity 1 - This is me!</a></li>
+                      <li><a href="#">Unity 2 -  My family</a></li>
+                      <li><a href="#">Unity 3 - School life and people</a></li>
+                  </ul>
+                </li>
+                <li class="dropdown-submenu">
+                  <a tabindex="-1" href="{% url 'modulo1' %}">Module 4 <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                      <li><a tabindex="-1" href="#">Unity 1 - This is me!</a></li>
+                      <li><a href="#">Unity 2 -  My family</a></li>
+                      <li><a href="#">Unity 3 - School life and people</a></li>
                   </ul>
                 </li>
                 <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Temario</li>
+                <li class="dropdown-header">Others</li>
                 <li><a href="{% url 'multimedia' %}">Multimedia</a></li>
-                <li><a href="#">Actividaddes</a></li>
+                <li><a href="#">#</a></li>
               </ul>
             </li>
             <li><a href="#">RECURSOS</a></li>
 
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="{% url 'perfil-estudiante' %}#">Perfil</a></li>
-            <li class="active"><a href="{% url 'logout' %}">Salir</a></li>
+            <li><a href="{% url 'perfil-estudiante' %}#">Profile</a></li>
+            <li class="active"><a href="{% url 'logout' %}">Logout</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -76,16 +97,21 @@
 
     {% endblock %}
 
+
 </div>
 
 {% include 'footermod.html' %}
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="../static/javascript/jquery.js"></script>
+    <script type="text/javascript" src="../static/javascript/jquery-1.11.2.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../static/vendors/bootstrap-3.3.6/js/modal.js"></script>
     <script src="../static/vendors/bootstrap-3.3.6/js/transition.js"></script>
     <script src="../static/vendors/bootstrap-3.3.6/dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../static/javascript/script.js"></script>
+
+{% block javascript %}
+{% endblock %}
+
 </body>
 </html>
