--- a/templates/paginaDocente/edit-grupos.html
+++ b/templates/paginaDocente/edit-grupos.html
@@ -1,5 +1,5 @@
 {% extends 'plantilla-prof.html' %}
-{% block title %} Agregar Grupos {% endblock %}
+{% block title %} Editar Grupos {% endblock %}
 
 {%  block content %}
 
@@ -11,14 +11,14 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Agregar <small> Grupo</small>
+                            Editar <small> Grupo</small>
                         </h1>
                         <ol class="breadcrumb">
                             <li>
                             <a href="#"><i class="fa fa-fw fa-table"></i> Grupos </a> 
                             </li>
                             <li class="active">
-                                 Agregar Grupos
+                                 Editar Grupos
                             </li>
                         </ol>
                     </div>
@@ -27,7 +27,7 @@
 
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
-                        <a href="#" class="btn btn-primary">Agregar Nuevo Grupo</a>
+                        <a href="#" class="btn btn-primary">Editar Grupo</a>
                     </div>
                     <br><br><br>
 
