--- a/templates/paginaDocente/grupos.html
+++ b/templates/paginaDocente/grupos.html
@@ -24,13 +24,14 @@
 
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
-                        <a href="#" class="btn btn-primary">Agregar Nuevo Grupo</a>
+                        <a href="{% url 'agregar-grupos'  %}" class="btn btn-primary">Agregar Nuevo Grupo</a>
                     </div>
                     <br><br><br>
 
-                    <div class="col-lg-4 col-md-6">
-                        <div class="col-lg-12 col-md-12 text-right" style="margin-bottom: 15px;">
-                            <a href="#" style="color: white;"> <i class="fa fa-times-circle" aria-hidden="true"></i> </a>    
+                    {% for row in grupos %}
+                    <div class="col-lg-3 col-md-5">
+                        <div class="col-lg-12 col-md-12 panel text-right" style="margin-bottom: 15px;border-color: #337ab7;border-bottom: none;background-color: #f5f5f5;padding-top: 5px;padding-bottom: 5px;">
+                            <a href="{% url 'eliminar-grupos' pk=row.pk %}" style="color: #337ab7;"> <i class="fa fa-times-circle" aria-hidden="true" style="font-size: 20px;"></i> </a>    
                         </div>
                         <div class="panel panel-primary">
                             <div class="panel-heading">
@@ -39,12 +40,12 @@
                                         <i class="fa fa-users fa-5x"></i>
                                     </div>
                                     <div class="col-xs-9 text-right">
-                                        <div class="huge">Grupo A</div>
-                                        <div>Estudiantes Registrados #</div>
+                                        <div class="huge">Grupo {{ row.nombre }}</div>
+                                        <div><a href="{% url 'editar-grupos' pk=row.pk %} " style="color: #fff;">Editar</a></div>
                                     </div>
                                 </div>
                             </div>
-                            <a href="#">
+                            <a href="{% url 'grupos-estudiantes' pk=row.pk %}">
                                 <div class="panel-footer">
                                     <span class="pull-left">Ver</span>
                                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -53,6 +54,7 @@
                             </a>
                         </div>
                     </div>
+                    {% endfor %}
 
                 </div>
 
