--- a/templates/paginaDocente/inicio-profe.html
+++ b/templates/paginaDocente/inicio-profe.html
@@ -44,7 +44,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="{% url 'primer-modulo-estudiantes' %}">
+                            <a href="{% url 'lista-grupos' %}">
                                 <div class="panel-footer">
                                     <span class="pull-left">Ver</span>
                                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
