--- a/templates/plantilla-prof.html
+++ b/templates/plantilla-prof.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,19 +10,15 @@
 
     <title>{% block title %} {% endblock %}</title>
 
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/sb-admin.css" rel="stylesheet">
-    <link href="../static/css/plugins/morris.css" rel="stylesheet">
-    <link href="../static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<!-- Favicon -->
+    <link rel="icon" type="image/png" href="{% static 'img/favicon/favicon-32x32.png' %}" sizes="32x32" />
+    <link rel="icon" type="image/png" href="{% static 'img/favicon/favicon-16x16.png' %}" sizes="16x16" />
+<!-- end favicon  -->
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <link href="{% static 'vendors/bootstrap-3.3.6/dist/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/sb-admin.css' %}" rel="stylesheet">
+    <link href="{% static 'css/plugins/morris.css' %}" rel="stylesheet">
+    <link href="{% static 'font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -86,6 +83,9 @@
                         </ul>
                     </li> -->
                     <li>
+                        <a href="{% url 'lista-curso' %}"><i class="fa fa-fw fa-file-text-o"></i> Cursos</a>
+                    </li>
+                    <li>
                         <a href="{% url 'lista-grupos' %}"><i class="fa fa-fw fa-users"></i> Grupos</a>
                     </li>
                     <li>
@@ -121,25 +121,25 @@
 
 {% include 'footer-prof.html' %}
 
-{% block javascript %}
-{% endblock %}
 <!-- jQuery -->
-    <script src="../static/javascript/jquery.js"></script>
-    <script src="../static/javascript/jquery.form.min.js"></script>
-    <script src="../static/javascript/js_var.js"></script>
-    <script src="../static/javascript/tinyeditor.js"></script>
+    <script src="{% static 'javascript/jquery.js' %}"></script>
+    <script src="{% static 'javascript/jquery.form.min.js' %}"></script>
+    <script src="{% static 'javascript/js_var.js' %}"></script>
+    <script src="{% static 'javascript/tinyeditor.js' %}"></script>
 
-    <script src="../static/vendors/bootstrap-3.3.6/js/transition.js"></script>
-    <script src="../static/vendors/bootstrap-3.3.6/js/modal.js"></script>
-    <script src="../static/vendors/bootstrap-3.3.6/js/tests/vendor/jquery.min.js"></script>
+    <script src="{% static 'vendors/bootstrap-3.3.6/js/transition.js' %}"></script>
+    <script src="{% static 'vendors/bootstrap-3.3.6/js/modal.js' %}"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="../static/javascript/bootstrap.min.js"></script>
+    <script src="{% static 'javascript/bootstrap.min.js' %}"></script>
 
     <!-- Morris Charts JavaScript -->
-    <script src="../static/javascript/plugins/morris/raphael.min.js"></script>
-    <script src="../static/javascript/plugins/morris/morris.min.js"></script>
-    <script src="../static/javascript/plugins/morris/morris-data.js"></script>
+    <script src="{% static 'javascript/plugins/morris/raphael.min.js' %}"></script>
+    <script src="{% static 'javascript/plugins/morris/morris.min.js' %}"></script>
+    <script src="{% static 'javascript/plugins/morris/morris-data.js' %}"></script>
+
+{% block javascript %}
+{% endblock %}
 
 </body>
 
