--- a/templates/plantilla2.html
+++ b/templates/plantilla2.html
@@ -62,11 +62,11 @@
                   </ul>
                 </li>
                 <li class="dropdown-submenu">
-                  <a tabindex="-1" href="{% url 'modulo1' %}">Module 3 - How We Live<span class="caret"></span></a>
+                  <a tabindex="-1" href="{% url 'modulo3' %}">Module 3 - How We Live<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                      <li><a tabindex="-1" href="#">Unity 1 - What we eat</a></li>
-                      <li><a href="#">Unity 2 -  Take good care</a></li>
-                      <li><a href="#">Unity 3 - Time for fun</a></li>
+                      <li><a tabindex="-1" href="{% url 'modulo3-unidad1' %}">Unity 1 - What we eat</a></li>
+                      <li><a href="{% url 'modulo3-unidad1' %}">Unity 2 -  Take good care</a></li>
+                      <li><a href="{% url 'modulo3-unidad1' %}">Unity 3 - Time for fun</a></li>
                   </ul>
                 </li>
                 <li class="dropdown-submenu">
@@ -129,11 +129,11 @@
                   </ul>
                 </li>
                 <li class="dropdown-submenu">
-                  <a tabindex="-1" href="{% url 'modulo1' %}">Module 3 - How We Live<span class="caret"></span></a>
+                  <a tabindex="-1" href="{% url 'modulo3' %}">Module 3 - How We Live<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                      <li><a tabindex="-1" href="#">Unity 1 - What we eat</a></li>
-                      <li><a href="#">Unity 2 -  Take good care</a></li>
-                      <li><a href="#">Unity 3 - Time for fun</a></li>
+                      <li><a tabindex="-1" href="{% url 'modulo3-unidad1' %}">Unity 1 - What we eat</a></li>
+                      <li><a href="{% url 'modulo3-unidad1' %}">Unity 2 -  Take good care</a></li>
+                      <li><a href="{% url 'modulo3-unidad1' %}">Unity 3 - Time for fun</a></li>
                   </ul>
                 </li>
                 <li class="dropdown-submenu">
